--- a/week7_react_request/image_gallery/src/style/Page.css
+++ b/week7_react_request/image_gallery/src/style/Page.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
 
-    width: 1440px;
+    width: 100%;
+    max-width: 1440px;
     height: auto;
 
     padding-top: 213.64px;
